# samp-pathfinder

./: .gitignore  CMakeLists.txt  LICENSE  README.md
lib/samp-sdk/amx/: amxplugin.cpp
src/: loader.cpp  main.cpp  natives.cpp  pathfinder.cpp  pathfinder.h  worker.cpp  worker.h
